--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@variant dark (&:where(.dark, .dark *));
+
 @theme {
   --color-primary: var(--color-blue-500);
   --color-error: var(--color-red-500);
